setup.cfg added

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Analysing code with mypy
         id: mypy
         run: |
-          mypy . --ignore-missing-imports --follow-imports=skip
+          mypy .
