--- a/app/.env.example
+++ b/app/.env.example
@@ -6,3 +6,9 @@ DB_PORT=5432
 
 DEBUG=True
 SECRET_KEY=
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
+DJANGO_SUPERUSER_EMAIL=
+
+JWT_ALGORITHM=RS256
+JWT_PUBLIC_KEY_PATH=/app/key.pub
