--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,27 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
+  app:
+    build: ./app
+    env_file:
+      - ./app/.env
+    volumes:
+      - appstatic:/app/staticfiles
+      - ${HOST_JWT_PUBLIC_KEY_PATH}:${JWT_PUBLIC_KEY_PATH}:ro
+    restart: always
+    depends_on:
+      - pg
+  nginx:
+    image: nginx:1.19.2-alpine
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/configs:/etc/nginx/conf.d:ro
+      - appstatic:/staticfiles:ro
+    depends_on:
+      - app
+    ports:
+      - 80:80
 
 volumes:
   pgdata:
+  appstatic:
