--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 mypy django-stubs
+          pip install flake8 mypy
       - name: Lint with flake8
         id: flake
         run: |
@@ -24,4 +24,4 @@ jobs:
       - name: Analysing code with mypy
         id: mypy
         run: |
-          mypy app
+          mypy app --config-file=app/setup.cfg
