--- a/app/setup.cfg
+++ b/app/setup.cfg
@@ -1,7 +1,9 @@
 [mypy]
 ignore_missing_imports = True
 follow_imports = skip
+exclude = migrations
 
 [flake8]
 exclude =
-    venv/
+    venv/,
+    */migrations/
