--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,10 @@
-Django==4.1.7
+Django==3.2.18
 django-split-settings==1.2.0
 python-dotenv==1.0.0
 psycopg2==2.9.5
 uwsgi==2.0.21
-djangorestframework-jwt==1.11.0
 pydantic==1.10.5
+djangorestframework==3.14.0
+
+PyJWT==2.6.0
+cryptography==38.0.4
