--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ POSTGRES_PASSWORD=
 
 JWT_PUBLIC_KEY_PATH=/app/key.pub
 HOST_JWT_PUBLIC_KEY_PATH=/your_local_machine/path/to/key.pub
+
+RABBITMQ_USER=
+RABBITMQ_PASS=
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
