--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,3 +3,11 @@ services:
   pg:
     ports:
       - 5432:5432
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASS}
+    ports:
+      - 5672:5672
+      - 15672:15672
