--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,15 @@ services:
       - app
     ports:
       - 80:80
-
+  rabbitmq:
+    image: rabbitmq:3-alpine
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
+    volumes:
+        - rabbitmq_data:/var/lib/rabbitmq/mnesia/
 volumes:
   pgdata:
   appstatic:
+  rabbitmq_data:
