--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,6 +5,8 @@ psycopg2==2.9.5
 uwsgi==2.0.21
 pydantic==1.10.5
 djangorestframework==3.14.0
+celery==5.2.7
+django-celery-beat==2.4.0
 
 PyJWT==2.6.0
 cryptography==38.0.4
