--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,6 +5,7 @@ psycopg2==2.9.5
 uwsgi==2.0.21
 pydantic==1.10.5
 djangorestframework==3.14.0
+python-dateutil==2.8.2
 
 PyJWT==2.6.0
 cryptography==38.0.4
