--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,6 +6,7 @@ uwsgi==2.0.21
 pydantic==1.10.5
 djangorestframework==3.14.0
 python-dateutil==2.8.2
+stripe==5.2.0
 
 PyJWT==2.6.0
 cryptography==38.0.4
