--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,7 +7,7 @@ pydantic==1.10.5
 djangorestframework==3.14.0
 python-dateutil==2.8.2
 celery==5.2.7
-django-celery-beat==2.4.0
+requests==2.28.2
 
 PyJWT==2.6.0
 cryptography==38.0.4
