Moved urls into settings

--- a/app/.env.example
+++ b/app/.env.example
@@ -17,6 +17,11 @@ RABBITMQ_USER=
 RABBITMQ_PASS=
 RABBITMQ_HOST=
 
-AUTH_API=
+CELERY_MAX_RETRIES=
+
+AUTH_BASE_URL
+AUTH_LOGIN_ENDPOINT=
+AUTH_USER_ROLE_ENDPOINT=
+
 AUTH_USERNAME=
 AUTH_PASSWORD=
