--- a/app/.env.example
+++ b/app/.env.example
@@ -27,3 +27,8 @@ AUTH_USER_ROLE_ENDPOINT=
 
 AUTH_USERNAME=
 AUTH_PASSWORD=
+
+BILLING_AUTH_TOKEN_COOKIE_NAME=auth_token
+BILLING_BASE_URL=
+BILLING_SUBSCRIPTIONS_ENDPOINT=
+BILLING_CLIENTS_ENDPOINT=
