--- a/app/.env.example
+++ b/app/.env.example
@@ -31,4 +31,5 @@ AUTH_PASSWORD=
 BILLING_AUTH_TOKEN_COOKIE_NAME=auth_token
 BILLING_BASE_URL=
 BILLING_SUBSCRIPTIONS_ENDPOINT=
+BILLING_USER_SUBSCRIPTIONS_ENDPOINT=
 BILLING_CLIENTS_ENDPOINT=
