stripe portal config added

--- a/app/.env.example
+++ b/app/.env.example
@@ -15,6 +15,7 @@ JWT_PUBLIC_KEY_PATH=/app/key.pub
 
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_KEY=
+STRIPE_PORTAL_CONFIG_ID=
 
 RABBITMQ_USER=
 RABBITMQ_PASS=
