--- a/app/.env.example
+++ b/app/.env.example
@@ -20,6 +20,9 @@ RABBITMQ_USER=
 RABBITMQ_PASS=
 RABBITMQ_HOST=
 
+SCHEDULER_RUN_INTERVAL=
+STRIPE_EVENTS_INTERVAL=
+
 AUTH_BASE_URL=
 AUTH_LOGIN_ENDPOINT=
 AUTH_LOGOUT_ENDPOINT=
